--- a/stories/slides-demo/index.html
+++ b/stories/slides-demo/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Slides Demo | Open Source Day with OpenHatch</title>
 <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
-<meta content="#5670d4" name="theme-color">
+<meta content="#2c3e50" name="theme-color">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
 <link rel="canonical" href="https://willingc.github.io/oh-ghc-2015/stories/slides-demo/">
 <!--[if lt IE 9]><script src="../../assets/js/html5.js"></script><![endif]--><meta name="author" content="Carol Willing">
@@ -41,6 +41,9 @@
             <ul class="nav navbar-nav">
 <li>
 <a href="../getting-ready/index.html">Getting Ready</a>
+                </li>
+<li>
+<a href="../mentors/index.html">Mentors</a>
                 </li>
 <li>
 <a href="../../archive.html">Archive</a>
@@ -79,17 +82,17 @@
     <div>
 <p>Nikola intends to let you do slideshows easily:</p>
 
-<div id="slides_b9f87c3478e04d28947135e67e44f623" class="carousel slide">
+<div id="slides_d181e7e4986049fbbed35f44986ef3a4" class="carousel slide">
     <ol class="carousel-indicators">
-<li data-target="#slides_b9f87c3478e04d28947135e67e44f623" data-slide-to="0" class="active">
+<li data-target="#slides_d181e7e4986049fbbed35f44986ef3a4" data-slide-to="0" class="active">
             </li>
-<li data-target="#slides_b9f87c3478e04d28947135e67e44f623" data-slide-to="1">
+<li data-target="#slides_d181e7e4986049fbbed35f44986ef3a4" data-slide-to="1">
             </li>
-<li data-target="#slides_b9f87c3478e04d28947135e67e44f623" data-slide-to="2">
+<li data-target="#slides_d181e7e4986049fbbed35f44986ef3a4" data-slide-to="2">
             </li>
-<li data-target="#slides_b9f87c3478e04d28947135e67e44f623" data-slide-to="3">
+<li data-target="#slides_d181e7e4986049fbbed35f44986ef3a4" data-slide-to="3">
             </li>
-<li data-target="#slides_b9f87c3478e04d28947135e67e44f623" data-slide-to="4">
+<li data-target="#slides_d181e7e4986049fbbed35f44986ef3a4" data-slide-to="4">
     </li>
 </ol>
 <div class="carousel-inner">
@@ -99,8 +102,8 @@
                 <div class="item"><img src="../../galleries/demo/tesla_lightning1_lg.jpg" alt="" style="margin: 0 auto 0 auto;"></div>
                 <div class="item"><img src="../../galleries/demo/tesla_tower1_lg.jpg" alt="" style="margin: 0 auto 0 auto;"></div>
     </div>
-    <a class="left carousel-control" href=".#slides_b9f87c3478e04d28947135e67e44f623" data-slide="prev"><span class="icon-prev"></span></a>
-    <a class="right carousel-control" href=".#slides_b9f87c3478e04d28947135e67e44f623" data-slide="next"><span class="icon-next"></span></a>
+    <a class="left carousel-control" href=".#slides_d181e7e4986049fbbed35f44986ef3a4" data-slide="prev"><span class="icon-prev"></span></a>
+    <a class="right carousel-control" href=".#slides_d181e7e4986049fbbed35f44986ef3a4" data-slide="next"><span class="icon-next"></span></a>
 </div>
 </div>
     </div>
